Fixed css on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -45,7 +45,8 @@
 	}
 }
 
-.title, .description {
+.title,
+.description {
 	text-align: center;
 }
 
@@ -61,7 +62,7 @@
 	padding: 0.75rem;
 	font-size: 1.1rem;
 	font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-	Bitstream Vera Sans Mono, Courier New, monospace;
+		Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
@@ -73,8 +74,8 @@
 }
 
 .card {
-	margin: 1rem;
-	padding: 1.5rem;
+	margin: clamp(1rem, 5em, 0px);
+	padding: clamp(1.5rem, 5em, 0px);
 	text-align: left;
 	color: inherit;
 	text-decoration: none;
@@ -82,6 +83,7 @@
 	border-radius: 10px;
 	transition: color 0.15s ease, border-color 0.15s ease;
 	max-width: 300px;
+	min-width: min-content;
 
 	&:hover,
 	&:focus,
